# document-extractor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: app_init.py  auth.py  config.py
app/modules/health/routes/: health_routes.py
app/modules/ocr/routes/: docling_routes.py  ocr_routes.py
app/modules/ocr/services/: docling_service.py  face_extraction_service.py  ocr_service.py
app/modules/ocr/types/: docling_types.py  ocr_types.py
